@@ -10,12 +10,9 @@ import org.slf4j.LoggerFactory;
 
 import jakarta.ws.rs.core.Response;
 
-import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.core.Is.is;
 
 public class RecordsIT extends ContainerTest {
@@ -29,9 +26,9 @@ public class RecordsIT extends ContainerTest {
         RecordsListDto resolved = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
 
         assertThat("results", resolved.getNumFound(), greaterThanOrEqualTo(1));
-        assertThat("expected faust", resolved.getRecords().get(0).getFaust(), is("24699773"));
-        assertThat("number of types", resolved.getRecords().get(0).getTypes().size(), is(1));
-        assertThat("expected type", resolved.getRecords().get(0).getTypes().get(0).getMaterialType(), is(MaterialType.BOOK));
+        assertThat("expected faust", resolved.getRecords().getFirst().getFaust(), is("24699773"));
+        assertThat("number of types", resolved.getRecords().getFirst().getTypes().size(), is(1));
+        assertThat("expected type", resolved.getRecords().getFirst().getTypes().getFirst().getMaterialType(), is(MaterialType.BOOK));
     }
 
     @Test
@@ -42,58 +39,9 @@ public class RecordsIT extends ContainerTest {
         RecordsListDto resolved = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
 
         assertThat("results", resolved.getNumFound(), greaterThanOrEqualTo(1));
-        assertThat("expected faust", resolved.getRecords().get(0).getFaust(), is("24699773"));
-        assertThat("number of types", resolved.getRecords().get(0).getTypes().size(), is(1));
-        assertThat("expected type", resolved.getRecords().get(0).getTypes().get(0).getMaterialType(), is(MaterialType.BOOK));
+        assertThat("expected faust", resolved.getRecords().getFirst().getFaust(), is("24699773"));
+        assertThat("number of types", resolved.getRecords().getFirst().getTypes().size(), is(1));
+        assertThat("expected type", resolved.getRecords().getFirst().getTypes().getFirst().getMaterialType(), is(MaterialType.BOOK));
     }
 
-    @Test
-    public void testResolveBarcode() throws JsonProcessingException {
-
-        Response response = getResponse("v1/api/records/5053083221386");
-        assertThat("status code", response.getStatus(), is(200));
-        RecordsListDto resolved = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
-
-        assertThat("results", resolved.getNumFound(), is(1));
-        assertThat("expected faust", resolved.getRecords().get(0).getFaust(), is("38352296"));
-        assertThat("number of types", resolved.getRecords().get(0).getTypes().size(), is(1));
-        assertThat("expected type", resolved.getRecords().get(0).getTypes().get(0).getMaterialType(), is(MaterialType.MOVIE));
-    }
-
-    @Test
-    public void testResolveBarcodeWithSomeWorksNotFound() throws JsonProcessingException {
-
-        Response response = getResponse("v1/api/records/5712976001848");
-        assertThat("status code", response.getStatus(), is(200));
-        RecordsListDto resolved = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
-
-        assertThat("results", resolved.getNumFound(), is(2));
-        assertThat("expected fausts", resolved.getRecords().stream()
-                .anyMatch(r -> List.of("38604929", "38478508").contains(r.getFaust())));
-    }
-
-    @Test
-    public void testConsistentReturnForNonexistingFausts() throws JsonProcessingException {
-
-        // There is situations where opensearch has results, but work-presentation
-        // has none, and so the final result is 'no records'. But the records property
-        // is then set to either a null OR an empty array.. This is very confusing for
-        // the frontend. Check that this situation has been fixed
-        //
-        // 15/05-2023: WorkPresentation has been dropped, we should get all results found by opensearch
-
-        Response response = getResponse("v1/api/records/123");
-        assertThat("status code", response.getStatus(), is(200));
-        RecordsListDto resolved_123 = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
-        assertThat("results", resolved_123.getNumFound(), is(3));
-        assertThat("records", resolved_123.getRecords(), is(not(nullValue())));
-        assertThat("records length", resolved_123.getRecords().size(), is(3));
-
-        response = getResponse("v1/api/records/226777809");
-        assertThat("status code", response.getStatus(), is(200));
-        RecordsListDto resolved_226777809 = mapper.readValue(response.readEntity(String.class), RecordsListDto.class);
-        assertThat("results", resolved_226777809.getNumFound(), is(0));
-        assertThat("records", resolved_226777809.getRecords(), is(not(nullValue())));
-        assertThat("records length", resolved_226777809.getRecords().size(), is(0));
-    }
 }
